<resources>
    <string name="app_name">CodeforcesContests</string>
    <string name="gym">Gym</string>
    <string name="competition">Competition</string>
    <string name="RU">Русский</string>
    <string name="EN">English</string>
    <string name="language">Languages</string>
    <string name="welcome">Welcome to Codeforces Contests</string>

    <string name="connection_lost">Connection lost</string>
    <string name="wrong_data_downloaded">During download an error occurred</string>
    <string name="try_again">Try again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="author">Author </string>
    <string name="duration">Length </string>
    <string name="start_time">Start at</string>
    <string name="status_finished">Finished</string>
    <string name="status_before">Not started</string>
    <string name="status_going">Going</string>
    <string name="waiting_for_system_testing">Waiting for system testing</string>
    <string name="status_testing">System testing</string>
    <string name="no_author">Not indicated</string>
    <string name="difficulty">Complexity </string>
    <string name="till_end">Till end</string>
    <string name="type">Type</string>
    <string name="website">Website URL</string>
    <string name="description">Description</string>
    <string name="kind">Kind</string>
    <string name="icpc_region">ICPC region</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="season">Season</string>
    <string name="phase">Phase</string>
    <string name="link_button">Contest page</string>
    <string name="author_button">Author page</string>

    <string name="author_ru">Автор </string>
    <string name="duration_ru">Продолжительность </string>
    <string name="start_time_ru">Время старта</string>
    <string name="status_finished_ru">Закончено</string>
    <string name="status_before_ru">Не стартовало</string>
    <string name="status_going_ru">Контест идёт</string>
    <string name="waiting_for_system_testing_ru">Ожидание системного тестирования</string>
    <string name="status_testing_ru">Системное тестирование</string>
    <string name="no_author_ru">Не указано</string>
    <string name="difficulty_ru">Сложность </string>
    <string name="till_end_ru">До конца </string>
    <string name="type_ru">Тип</string>
    <string name="website_ru">Адрес вебсайта</string>
    <string name="description_ru">Описание</string>
    <string name="kind_ru">Вид</string>
    <string name="icpc_region_ru">ICPC регион</string>
    <string name="country_ru">Страна</string>
    <string name="city_ru">Город</string>
    <string name="season_ru">Сезон</string>
    <string name="phase_ru">Статус</string>
    <string name="link_button_ru">Перейти на страницу контеста</string>
    <string name="author_button_ru">Перейти на страницу автора</string>
</resources>
