<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/contest_type">

        <item
            android:id="@+id/nav_competitions"
            android:icon="@drawable/ic_competitions"
            android:title="@string/competition" />
        <item
            android:id="@+id/nav_gym"
            android:icon="@drawable/ic_gym"
            android:title="@string/gym" />

    </group>


    <item android:title="@string/language">
        <menu>
            <item
            android:id="@+id/russian"
            android:icon="@drawable/ru"
            android:title="@string/RU" />
        <item
            android:id="@+id/english"
            android:icon="@drawable/uk"
            android:title="@string/EN"/>
        </menu>
    </item>

</menu>
