<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_marginBottom="@dimen/for_contest_items"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="@dimen/fab_margin"
	android:paddingRight="@dimen/fab_margin">

	<TextView
		android:textSize="@dimen/contest_name_size"
		android:id="@+id/contest_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:gravity="center"/>

	<TextView
		android:textSize="@dimen/status_text_size"
		android:id="@+id/status"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/author"
			android:id="@+id/author_sign"
			android:layout_weight="1"/>
		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:id="@+id/author"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="end"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/length_sign"
			android:text="@string/duration"
			android:layout_weight="1"/>

		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/duration"
			android:layout_weight="1"
			android:gravity="end"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/time_container">

		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:id="@+id/time_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>

		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:id="@+id/time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="end"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/difficulty_container">

		<TextView
			android:textSize="@dimen/another_item_text_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/difficulty"
			android:id="@+id/complexity_sign"
			android:layout_weight="1"/>

		<ProgressBar
			android:id="@+id/difficulty"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/progressBarStyleHorizontal"
			android:indeterminate="false"
			android:max="5"
			android:progress="0"
			android:layout_weight="1"
			android:gravity="end"/>
	</LinearLayout>

</LinearLayout>